--- a/index.html
+++ b/index.html
@@ -3,12 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ticketmaster Events</title>
+  <title>Tick-It</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Ticketmaster Events</h1>
-  <div id="events-container"></div>
+  <header>
+    <div class="logo-container">
+      <img src="images/logo.png" alt="Tick-It Events Logo">
+    </div>
+
+    <div class="title-container">
+      <h1>Tick-It</h1>
+      <p class="slogan">Tick it off your list today!</p>
+    </div>
+    <div class="auth-buttons">
+      <button>Login</button>
+      <button>Signup</button>
+    </div>
+  </header>
+
+  <div class="header-controls">
+    <button class="filter-button"> Filters <i class="fas fa-filter"></i> </button>
+    <input type="text" placeholder="Search Events..." class="search-bar">
+    <button class="add-event-button">Create Event</button>
+  </div>
+
+  <div class="green-bar"></div>
+  <br>
+  <body>
+    <div id="events-container"></div>
+  </body>
 
   <script src="script.js"></script>
+
+  <div class="green-bar"></div>
+  <footer>
+    <div class="about-us">
+      <h2>About Us</h2>
+      <p>Final Year Project for Applied Computing SETU <br>
+        For more information email: ile.gacov@gmail.com
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
