Attempting to add filters to API calls but doesnt work

--- a/index.html
+++ b/index.html
@@ -29,6 +29,32 @@
     <button class="add-event-button">Create Event</button>
   </div>
 
+   <!-- Filter dropdowns -->
+   <div id="filter-dropdown" style="display: none;">
+    <select id="category-filter">
+      <option value="">Select Category</option>
+      <!-- Add categories here -->
+      <option value="music">Music</option>
+      <option value="sports">Sports</option>
+      <option value="arts-theatre">Arts & Theatre</option>
+    </select>
+    <select id="date-filter">
+      <option value="">Select Date</option>
+      <!-- Add date options here -->
+      <option value="today">Today</option>
+      <option value="tomorrow">Tomorrow</option>
+      <option value="this-week">This Week</option>
+    </select>
+    <select id="location-filter">
+      <option value="">Select Location</option>
+      <!-- Add location options here -->
+      <option value="pheonix">Pheonix</option>
+      <option value="london">London</option>
+      <option value="new-york">New York</option>
+    </select>
+    <button id="apply-filter-button">Apply Filters</button>
+  </div>
+
   <div class="green-bar"></div>
   <br>
   <body>
