New script file

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div id="events-container"></div>
   </body>
 
-  <script src="script.js"></script>
+  <script src="script2.js"></script>
 
   <div class="green-bar"></div>
   <footer>
