Added a basic form of authentication with signing up and logging in with localStorage

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <p class="slogan">Tick it off your list today!</p>
     </div>
     <div class="auth-buttons">
-      <button>Login</button>
-      <button>Signup</button>
+      <button class="login-button">Login</button>
+      <button class="signup-button">Signup</button>
     </div>
   </header>
 
