Add view date time and performer

--- a/eventpage.html
+++ b/eventpage.html
@@ -17,15 +17,18 @@
       <h1>Tick-It</h1>
       <p class="slogan">Tick it off your list today!</p>
     </div>
-    <div class="auth-buttons">
+    <div class="auth-buttons2">
       <button class="login-button">Login</button>
       <button class="signup-button">Signup</button>
     </div>
   </header>
-    <div id="event-details">
-      <h2 id="event-name"></h2>
-      <p id="event-location"></p>
-    </div>
+   <div id="event-details">
+    <h2 id="event-name"></h2>
+    <p id="event-location"></p>
+    <p id="event-date"></p>
+    <p id="event-time"></p>
+    <p id="event-performer"></p>
+  </div>
 
   <script src="scriptforevents.js"></script>
 
