added event performer and images

--- a/eventpage.html
+++ b/eventpage.html
@@ -27,8 +27,10 @@
     <p id="event-location"></p>
     <p id="event-date"></p>
     <p id="event-time"></p>
-    <p id="event-performer"></p>
+    <p id="event-description"></p>
+    <img id="event-images" src="" alt="Event Images"></p>
   </div>
+
 
   <script src="scriptforevents.js"></script>
 
