adding my own simple buy now page

--- a/eventpage.html
+++ b/eventpage.html
@@ -29,6 +29,7 @@
     <p id="event-time"></p>
     <p id="event-description"></p>
     <img id="event-images" src="" alt="Event Images"></p>
+    <button id="buyTicketButton">Buy Ticket</button>
   </div>
 
 
